<resources>
    <string name="app_name">Controle de Sinais Vitais</string>
    <string name="pressaoArterial">Pressão Arterial:</string>
    <string name="batimentosCardiacos">Batimentos Cardiacos:</string>
    <string name="temperaturaCorpo">Temperatura do corpo:</string>
    <string name="nomePaciente">Nome do Paciente:</string>
    <string name="numeroLeito">Número do Leito:</string>
    <string name="botaoEnviar">Enviar</string>
</resources>
